# rcb-01

./: CLAUDE.md  api_diagram.html  frontend-changes.md  pyproject.toml  run.sh
.claude/: settings.local.json
.trees/quality_feature/: .pre-commit-config.yaml  CLAUDE.md  pyproject.toml
.trees/quality_feature/.claude/: settings.local.json
.trees/quality_feature/backend/: app.py  config.py  vector_store.py
.trees/quality_feature/backend/tests/: conftest.py
.trees/quality_feature/scripts/: format.sh  lint.sh  quality.sh
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_integration.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
